<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="346dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:paddingVertical="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000333"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/premiere"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginBottom="420dp"
        android:backgroundTint="#2F80ED"
        android:fontFamily="sans-serif"
        android:textColor="#F2F2F2"
        android:text="@string/button_premiere"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/terminale"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginBottom="216dp"
        android:backgroundTint="#2F80ED"
        android:fontFamily="sans-serif"
        android:textColor="#F2F2F2"
        android:text="@string/button_terminale"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ajout"
        android:layout_width="252dp"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#2F80ED"
        android:fontFamily="sans-serif"
        android:text="@string/ajoutez_une_question"
        android:textColor="#F2F2F2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>